always include  LaunchSettings.json in all the proejcts

--- a/TimeWarp.Templates/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
+++ b/TimeWarp.Templates/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
@@ -23,18 +23,13 @@
   <ItemGroup>
     <Content
       Include="templates\**\*"
-      Exclude="**\bin\**;**\obj\**;**\node_modules\**;**\*.user;**\.vs\**;**\.vscode\**;templates\Directory.Build.*;**\.template.config.src\**;**\launchSettings.json" />
+      Exclude="**\bin\**;**\obj\**;**\node_modules\**;**\*.user;**\.vs\**;**\.vscode\**;templates\Directory.Build.*;**\.template.config.src\**" />
 <!--    How to include TimeWarp.Architecture folder in the templates dir but it is located in a different folder?-->
-    <!-- Split the Content elements to handle Aspire launchSettings.json separately -->
+    <!-- Include all files including launchSettings.json -->
     <Content
       Include="..\..\..\TimeWarp.Architecture\**\*"
-      Exclude="**\bin\**;**\obj\**;**\node_modules\**;**\*.user;**\.vs\**;**\.vscode\**;**\launchSettings.json"
+      Exclude="**\bin\**;**\obj\**;**\node_modules\**;**\*.user;**\.vs\**;**\.vscode\**"
       PackagePath="content\templates\TimeWarp.Architecture\%(RecursiveDir)%(FileName)%(Extension)" />
-      
-    <!-- Explicitly include Aspire launchSettings.json -->
-    <Content
-      Include="..\..\..\TimeWarp.Architecture\Source\ContainerApps\Aspire\**\Properties\launchSettings.json"
-      PackagePath="content\templates\TimeWarp.Architecture\Source\ContainerApps\Aspire\%(RecursiveDir)%(Filename)%(Extension)" />
     <Compile Remove="**\*" />
   </ItemGroup>
   
