Task: Update Sync Workflow = Complete Updated file paths and cron schedule handling\n\nCo-authored-by: TimeWarp AI <noreply@timewarp.enterprises>

--- a/TimeWarp.Architecture/.github/sync-config.yml
+++ b/TimeWarp.Architecture/.github/sync-config.yml
@@ -10,48 +10,48 @@ parent:
 # Each entry can be a file path or a pattern
 sync_files:
   # Development configuration files
-  - ".gitignore"
-  - ".gitattributes"
-  - ".editorconfig"
-  
+  - "TimeWarp.Architecture/.gitignore"
+  - "TimeWarp.Architecture/.gitattributes"
+  - "TimeWarp.Architecture/.editorconfig"
+
   # GitHub workflows and templates
-  - ".github/workflow-templates/"
-  - ".github/workflows/sync-configurable-files.yml"
-  - ".github/workflows/sync-configurable-files.md"
-  
+  - "TimeWarp.Architecture/.github/workflow-templates/"
+  - "TimeWarp.Architecture/.github/workflows/sync-configurable-files.yml"
+  - "TimeWarp.Architecture/.github/workflows/sync-configurable-files.md"
+
   # Code quality configurations
-  - ".eslintrc.js"
-  - ".prettierrc.json"
-  - ".prettierignore"
-  
+  - "TimeWarp.Architecture/.eslintrc.js"
+  - "TimeWarp.Architecture/.prettierrc.json"
+  - "TimeWarp.Architecture/.prettierignore"
+
   # Build and project configuration templates
-  - "Directory.Build.targets"
-  - "NuGet.config"
-  
+  - "TimeWarp.Architecture/Directory.Build.targets"
+  - "TimeWarp.Architecture/NuGet.config"
+
   # Documentation templates
-  - ".templates/"
+  - "TimeWarp.Architecture/.templates/"
 
 # Files to exclude from synchronization (even if matched by patterns above)
 exclude_files:
-  - ".github/sync-config.yml"  # Don't sync this config file - each repo has its own configuration
+  - "TimeWarp.Architecture/.github/sync-config.yml"  # Don't sync this config file - each repo has its own configuration
 
 # Sync schedule configuration
 schedule:
   # Cron expression for when to run the sync
   # Default: Every Monday at 9:00 AM UTC
   cron: "0 9 * * 1"
-  
+
 # Pull Request configuration
 pull_request:
   # Branch name prefix for sync PRs
   branch_prefix: "sync-configurable-files"
-  
+
   # PR title template
   title: "Sync configurable files from parent repository"
-  
+
   # Auto-merge PRs if all checks pass (requires branch protection rules)
   auto_merge: false
-  
+
   # Labels to add to sync PRs
   labels:
     - "automated"
