Update .NET SDK version to 9.0.300 in global.json files and add SDK list step in workflow

--- a/.github/workflows/timewarp-architecture.yml
+++ b/.github/workflows/timewarp-architecture.yml
@@ -26,6 +26,9 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
+      - name: List Installed .NET SDKs
+        run: dotnet --list-sdks
+
       - name: Pack
         run: |
           cd TimeWarp.Templates/Source/TimeWarp.Architecture.Template/
