--- a/TimeWarp.Architecture/.github/sync-config.yml
+++ b/TimeWarp.Architecture/.github/sync-config.yml
@@ -10,30 +10,30 @@ parent:
 # Each entry can be a file path or a pattern
 sync_files:
   # Development configuration files
-  - "TimeWarp.Architecture/.gitignore"
-  - "TimeWarp.Architecture/.gitattributes"
-  - "TimeWarp.Architecture/.editorconfig"
+  - ".gitignore"
+  - ".gitattributes"
+  - ".editorconfig"
 
   # GitHub workflows and templates
-  - "TimeWarp.Architecture/.github/workflow-templates/"
-  - "TimeWarp.Architecture/.github/workflows/sync-configurable-files.yml"
-  - "TimeWarp.Architecture/.github/workflows/sync-configurable-files.md"
+  - ".github/workflow-templates/"
+  - ".github/workflows/sync-configurable-files.yml"
+  - ".github/workflows/sync-configurable-files.md"
 
   # Code quality configurations
-  - "TimeWarp.Architecture/.eslintrc.js"
-  - "TimeWarp.Architecture/.prettierrc.json"
-  - "TimeWarp.Architecture/.prettierignore"
+  - ".eslintrc.js"
+  - ".prettierrc.json"
+  - ".prettierignore"
 
   # Build and project configuration templates
-  - "TimeWarp.Architecture/Directory.Build.targets"
-  - "TimeWarp.Architecture/NuGet.config"
+  - "Directory.Build.targets"
+  - "NuGet.config"
 
   # Documentation templates
-  - "TimeWarp.Architecture/.templates/"
+  - ".templates/"
 
 # Files to exclude from synchronization (even if matched by patterns above)
 exclude_files:
-  - "TimeWarp.Architecture/.github/sync-config.yml"  # Don't sync this config file - each repo has its own configuration
+  - ".github/sync-config.yml"  # Don't sync this config file - each repo has its own configuration
 
 # Sync schedule configuration
 schedule:
