Add actions:write permission to sync workflow
- Fixes GitHub App permission error when syncing workflow files
- Allows the workflow to create PRs that modify .github/workflows/ files
- Resolves: refusing to allow a GitHub App to create or update workflow without workflows permission

--- a/TimeWarp.Architecture/.github/workflows/sync-configurable-files.yml
+++ b/TimeWarp.Architecture/.github/workflows/sync-configurable-files.yml
@@ -33,6 +33,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      actions: write  # Required to sync workflow files
 
     steps:
       - name: Checkout current repository
